# aoc-2024

./: .gitignore  Cargo.toml  devenv.nix  logs  new_day.sh
.cargo/: config.toml
.github.bak/workflows/: codspeed.yml
.github/workflows/: codspeed.yml
benches/: bench_days.rs
src/: day05.rs  day06.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day17_output.txt  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day7.rs  day_template.rs  lib.rs  main.rs
src/utils/: manhattan.rs  mod.rs  neigbours.rs
